--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -137,7 +137,18 @@
             "\n",
             "Model using 'response_time_minutes':\n",
             "Mean Squared Error: 2.31584588140766\n",
-            "R-squared: 0.02073014449793764\n"
+            "R-squared: 0.02073014449793764\n",
+            "       response_time_minutes  Actual_CSAT_Score  Predicted_CSAT_Score\n",
+            "3394                    55.0                  4              4.099767\n",
+            "23665                    2.0                  5              4.123381\n",
+            "8895                  5721.0                  1              1.575307\n",
+            "13218                    2.0                  4              4.123381\n",
+            "12382                   27.0                  5              4.112242\n",
+            "2932                  2887.0                  1              2.837983\n",
+            "20001                    2.0                  5              4.123381\n",
+            "26043                    3.0                  5              4.122935\n",
+            "3023                     2.0                  5              4.123381\n",
+            "5102                    18.0                  5              4.116252\n"
           ]
         }
       ],
