--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -22,98 +22,17 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sdHlLc9ZOV7R",
-        "outputId": "df52d57b-bee9-43be-aca6-045659d70d45"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                              Unique id channel_name       category  \\\n",
-            "0  372b51a5-fa19-4a31-a4b8-a21de117d75e      Inbound        Returns   \n",
-            "1  6e4413db-4e16-42fc-ac92-2f402e3df03c      Inbound        Returns   \n",
-            "2  4c28acf4-2ea4-4be8-b8f1-113e676fc8b7      Inbound  Order Related   \n",
-            "3  c54459b3-ffb3-4ffa-a338-6fd179beb6b1      Inbound  Order Related   \n",
-            "4  6e51734e-9627-4a12-8062-877c3638627d      Inbound  Order Related   \n",
-            "\n",
-            "             Sub-category                                   Customer_Remarks  \\\n",
-            "0  Exchange / Replacement                                          Very good   \n",
-            "1                 Missing  Shopzilla app and it's all coustomer care serv...   \n",
-            "2                 Delayed                                           Very bad   \n",
-            "3       Installation/demo                                         Something    \n",
-            "4       Installation/demo                                           All good   \n",
-            "\n",
-            "     Issue_reported at      issue_responded Survey_response_Date  \\\n",
-            "0  2023-08-01 16:17:00  2023-08-01 16:23:00  2023-08-01 00:00:00   \n",
-            "1  2023-08-01 21:03:00  2023-08-01 21:07:00  2023-08-01 00:00:00   \n",
-            "2  2023-08-02 10:44:00  2023-08-02 11:14:00  2023-08-02 00:00:00   \n",
-            "3  2023-08-01 10:00:00  2023-08-01 10:04:00  2023-08-01 00:00:00   \n",
-            "4  2023-08-02 20:03:00  2023-08-02 20:05:00  2023-08-02 00:00:00   \n",
-            "\n",
-            "      Agent_name     Supervisor          Manager    Tenure Bucket Agent Shift  \\\n",
-            "0    Laura Smith  Evelyn Kimura  Jennifer Nguyen  On Job Training     Evening   \n",
-            "1    David Smith   Nathan Patel       John Smith              >90       Split   \n",
-            "2  Stanley Hogan    Harper Wong       Emily Chen              >90       Split   \n",
-            "3   Jennifer May   Zoe Yamamoto      William Kim  On Job Training     Morning   \n",
-            "4   David Butler    Olivia Wang       Emily Chen            31-60     Evening   \n",
-            "\n",
-            "   CSAT_Score  response_time_minutes  issue_reported_hour_of_day  \\\n",
-            "0           5                    6.0                          16   \n",
-            "1           5                    4.0                          21   \n",
-            "2           1                   30.0                          10   \n",
-            "3           3                    4.0                          10   \n",
-            "4           5                    2.0                          20   \n",
-            "\n",
-            "   issue_reported_day_of_week  \n",
-            "0                           1  \n",
-            "1                           1  \n",
-            "2                           2  \n",
-            "3                           1  \n",
-            "4                           2  \n",
-            "         CSAT_Score  response_time_minutes  issue_reported_hour_of_day  \\\n",
-            "count  28742.000000           28742.000000                28742.000000   \n",
-            "mean       4.073238             130.186835                   14.456718   \n",
-            "std        1.560075             593.501462                    5.066173   \n",
-            "min        1.000000           -1437.000000                    0.000000   \n",
-            "25%        4.000000               2.000000                   11.000000   \n",
-            "50%        5.000000               5.000000                   15.000000   \n",
-            "75%        5.000000              29.000000                   19.000000   \n",
-            "max        5.000000            5742.000000                   23.000000   \n",
-            "\n",
-            "       issue_reported_day_of_week  \n",
-            "count                28742.000000  \n",
-            "mean                     2.835050  \n",
-            "std                      1.958646  \n",
-            "min                      0.000000  \n",
-            "25%                      1.000000  \n",
-            "50%                      3.000000  \n",
-            "75%                      5.000000  \n",
-            "max                      6.000000  \n"
-          ]
-        }
-      ],
-      "source": [
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.metrics import  mean_squared_error, r2_score\n",
         "#Connect to database\n",
         "conn = sqlite3.connect('cleaned_customer_support.db')\n",
         "data = pd.read_sql_query(\"SELECT * FROM cleaned_customer_support\", conn)\n",
-        "print(data.head())\n",
-        "print(data.describe())"
+        "y = data['CSAT_Score']"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -156,7 +75,6 @@
         "#First going to evaluate the hour when the issue was reported as well as the response time \n",
         "X1 = data[['issue_reported_hour_of_day']]\n",
         "X2 = data[['response_time_minutes']]\n",
-        "y = data['CSAT_Score']\n",
         "#First model based on issue_reported_hour_of_day\n",
         "X1_train, X1_test, y_train, y_test = train_test_split(X1, y, test_size=0.2, random_state=42)\n",
         "model1 = LinearRegression()\n",
@@ -186,7 +104,62 @@
         "examples = X2_test.copy()  \n",
         "examples['Actual_CSAT_Score'] = y_test \n",
         "examples['Predicted_CSAT_Score'] = y_pred2  \n",
-        "print(examples.head(10))  \n"
+        "print(examples.head(10))  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 81,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Afternoon' 'Evening' 'Morning' 'Night' 'Split']\n",
+            "   A  E  M  N  S  Actual_CSAT_Score  Predicted_CSAT_Score\n",
+            "0  0  0  1  0  0                  4              4.001691\n",
+            "1  0  0  1  0  0                  5              4.001691\n",
+            "2  1  0  0  0  0                  1              4.137886\n",
+            "3  0  0  1  0  0                  4              4.001691\n",
+            "4  0  1  0  0  0                  5              4.096031\n",
+            "5  0  1  0  0  0                  1              4.096031\n",
+            "6  0  1  0  0  0                  5              4.096031\n",
+            "7  0  1  0  0  0                  5              4.096031\n",
+            "8  0  0  0  0  1                  5              4.338692\n",
+            "9  0  0  1  0  0                  5              4.001691\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Third model based on Agent Shift which needs one hot encoder to preprocess the data since the shifts are split into known ones\n",
+        "encoder = OneHotEncoder() \n",
+        "X3_encoded = encoder.fit_transform(data[['Agent Shift']])\n",
+        "shift_categories = encoder.categories_[0] \n",
+        "print(shift_categories)\n",
+        "# Train model\n",
+        "X3_train, X3_test, y_train, y_test = train_test_split(X3_encoded, y, test_size=0.2, random_state=42)\n",
+        "model3 = LinearRegression()\n",
+        "model3.fit(X3_train, y_train)\n",
+        "y_pred3 = model3.predict(X3_test)\n",
+        "mse3 = mean_squared_error(y_test, y_pred3)\n",
+        "r2_3 = r2_score(y_test, y_pred3)\n",
+        "mapped_categories = {int(i): category[0] for i, category in enumerate(shift_categories)}\n",
+        "\n",
+        "# Convert test data to DataFrame and map encoded categories to their labels\n",
+        "X3_test_df = pd.DataFrame.sparse.from_spmatrix(X3_test)\n",
+        "X3_test_df = X3_test_df.rename(columns=mapped_categories)\n",
+        "X3_test_df = X3_test_df.astype(int)\n",
+        "\n",
+        "X3_test_df.reset_index(drop=True, inplace=True)\n",
+        "y_test.reset_index(drop=True, inplace=True)\n",
+        "examples = X3_test_df.copy()  \n",
+        "examples['Actual_CSAT_Score'] = y_test \n",
+        "examples['Predicted_CSAT_Score'] = y_pred3 \n",
+        "\n",
+        "print(examples.head(10))\n",
+        "\n",
+        "\n"
       ]
     },
     {
