--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -447,7 +447,7 @@
         }
       ],
       "source": [
-        "# Assuming your dataframe is named 'customer_support_df' and has been loaded correctly\n",
+        "\n",
         "\n",
         "# Convert the columns to datetime\n",
         "customer_support_df['order_date_time'] = pd.to_datetime(customer_support_df['order_date_time'], dayfirst=True)\n",
@@ -469,8 +469,6 @@
         "# Calculate elapsed time from order to survey response (in days)\n",
         "customer_support_df['elapsed_days_to_survey'] = (customer_support_df['Survey_response_Date'] - customer_support_df['order_date_time']).dt.total_seconds() / (60 * 60 * 24)\n",
         "\n",
-        "# Now, your dataframe will have the new columns with the calculated data\n",
-        "# Print DataFrame information to get a summary including the number of non-null entries per column\n",
         "print(\"DataFrame Information:\")\n",
         "print(customer_support_df.info())\n",
         "\n",
@@ -567,7 +565,6 @@
       },
       "outputs": [],
       "source": [
-        "# Assuming your original DataFrame is named 'customer_support_df'\n",
         "\n",
         "# Filter the DataFrame to include only rows with no missing values\n",
         "complete_cases_df = customer_support_df.dropna()\n",
@@ -668,65 +665,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting sklearn\n",
-            "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
-            "  Installing build dependencies: started\n",
-            "  Installing build dependencies: finished with status 'done'\n",
-            "  Getting requirements to build wheel: started\n",
-            "  Getting requirements to build wheel: finished with status 'error'\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "  error: subprocess-exited-with-error\n",
-            "  \n",
-            "  × Getting requirements to build wheel did not run successfully.\n",
-            "  │ exit code: 1\n",
-            "  ╰─> [15 lines of output]\n",
-            "      The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
-            "      rather than 'sklearn' for pip commands.\n",
-            "      \n",
-            "      Here is how to fix this error in the main use cases:\n",
-            "      - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
-            "      - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
-            "        (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
-            "      - if the 'sklearn' package is used by one of your dependencies,\n",
-            "        it would be great if you take some time to track which package uses\n",
-            "        'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
-            "      - as a last resort, set the environment variable\n",
-            "        SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
-            "      \n",
-            "      More information is available at\n",
-            "      https://github.com/scikit-learn/sklearn-pypi-package\n",
-            "      [end of output]\n",
-            "  \n",
-            "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-            "error: subprocess-exited-with-error\n",
-            "\n",
-            "× Getting requirements to build wheel did not run successfully.\n",
-            "│ exit code: 1\n",
-            "╰─> See above for output.\n",
-            "\n",
-            "note: This error originates from a subprocess, and is likely not a problem with pip.\n"
-          ]
-        }
-      ],
-      "source": [
-        "%pip install sklearn\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 9,
       "metadata": {},
       "outputs": [
@@ -816,28 +754,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: scikit-learn in c:\\users\\oumar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.4.1.post1)\n",
-            "Requirement already satisfied: numpy<2.0,>=1.19.5 in c:\\users\\oumar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (1.23.4)\n",
-            "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\oumar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (1.11.4)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\oumar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (1.3.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\oumar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from scikit-learn) (3.3.0)\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        }
-      ],
-      "source": [
-        "%pip install scikit-learn"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 11,
       "metadata": {},
       "outputs": [
@@ -889,8 +805,7 @@
         "from sklearn.metrics import mean_squared_error, r2_score\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "# Assuming your DataFrame is named 'cleaned_df' and you've already added 'sentiment_polarity' to it\n",
-        "# and your sentiment scores are properly scaled/encoded\n",
+        "\n",
         "\n",
         "# First, check the correlation\n",
         "correlation = cleaned_df[['sentiment_score', 'CSAT_Score']].corr()\n",
@@ -927,11 +842,10 @@
         "comparison_df = pd.DataFrame({'Actual_CSAT_Score': y_test, 'Predicted_CSAT_Score': predicted})\n",
         "\n",
         "# Reset index to get a neat DataFrame without the old index\n",
-        "# If you wish to keep the old index, just remove '.reset_index(drop=True)'\n",
         "comparison_df = comparison_df.reset_index(drop=True)\n",
         "\n",
         "# Display the DataFrame\n",
-        "print(comparison_df.head(10))  # Display the first 10 rows"
+        "print(comparison_df.head(10))  "
       ]
     },
     {
