added other sentimental analysis

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "is_executing": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -304,7 +304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_35076\\3803681437.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\oumar\\AppData\\Local\\Temp\\ipykernel_12280\\3803681437.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  customer_support_df['Survey_response_Date'] = pd.to_datetime(customer_support_df['Survey_response_Date'],dayfirst=True)\n"
      ]
     },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -876,6 +876,124 @@
     "\n",
     "# Display the DataFrame\n",
     "print(comparison_df.head(10))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                    Customer_Remarks  bert_sentiment\n",
+      "0                                          Very good        0.444959\n",
+      "1  Shopzilla app and it's all coustomer care serv...        0.444480\n",
+      "2                                           Very bad        0.465500\n",
+      "3                                         Something         0.421449\n",
+      "4                                           All good        0.460355\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertTokenizer, BertForSequenceClassification, pipeline\n",
+    "import torch\n",
+    "\n",
+    "# trying without specific model\n",
+    "model_name = \"bert-base-uncased\"\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "model = BertForSequenceClassification.from_pretrained(model_name)\n",
+    "\n",
+    "def calculate_bert_sentiment(text):\n",
+    "    if pd.isna(text):\n",
+    "        return 0  # Assume neutral sentiment for missing remarks\n",
+    "    encoded_input = tokenizer(text, return_tensors='pt', truncation=True, max_length=512, padding=True)\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**encoded_input)\n",
+    "    scores = torch.nn.functional.softmax(outputs.logits, dim=-1)\n",
+    "    # Assuming that the first class is negative and the second is positive\n",
+    "    positive_score = scores[:,1].item()\n",
+    "    return positive_score\n",
+    "\n",
+    "\n",
+    "cleaned_df['bert_sentiment'] = cleaned_df['Customer_Remarks'].apply(calculate_bert_sentiment)\n",
+    "\n",
+    "# Display the first few entries of the new sentiment scores\n",
+    "print(cleaned_df[['Customer_Remarks', 'bert_sentiment']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                    Customer_Remarks  bert_sentiment\n",
+      "0                                          Very good        0.999852\n",
+      "1  Shopzilla app and it's all coustomer care serv...        0.999577\n",
+      "2                                           Very bad       -0.999788\n",
+      "3                                         Something         0.999094\n",
+      "4                                           All good        0.999840\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "# This time, trying a model that's been fine-tuned for sentiment analysis\n",
+    "model_name = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
+    "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=model_name)\n",
+    "\n",
+    "def calculate_bert_sentiment(text):\n",
+    "    if pd.isna(text):\n",
+    "        return None  # or 0 for neutral sentiment\n",
+    "    result = sentiment_pipeline(text[:512])  \n",
+    "    return result[0]['score'] if result[0]['label'] == 'POSITIVE' else -result[0]['score']\n",
+    "\n",
+    "# Apply the function to the Customer_Remarks column\n",
+    "cleaned_df['bert_sentiment'] = cleaned_df['Customer_Remarks'].apply(calculate_bert_sentiment)\n",
+    "\n",
+    "# Show the first few entries of the new sentiment scores\n",
+    "print(cleaned_df[['Customer_Remarks', 'bert_sentiment']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Unique id', 'channel_name', 'category', 'Sub-category',\n",
+      "       'Customer_Remarks', 'Issue_reported at', 'issue_responded',\n",
+      "       'Survey_response_Date', 'Agent_name', 'Supervisor', 'Manager',\n",
+      "       'Tenure Bucket', 'Agent Shift', 'CSAT_Score', 'response_time_minutes',\n",
+      "       'issue_reported_hour_of_day', 'issue_reported_day_of_week',\n",
+      "       'sentiment_score'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop the 'bert_sentiment' column since it was not a succes for both models\n",
+    "cleaned_df.drop(columns=['bert_sentiment'], inplace=True)\n",
+    "\n",
+    "# Display the DataFrame to confirm the column is dropped\n",
+    "print(cleaned_df.columns)"
    ]
   }
  ],
