--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "is_executing": true
    },
@@ -27,12 +27,14 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from transformers import BertTokenizer, BertForSequenceClassification, pipeline\n",
+    "import torch\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -291,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -304,7 +306,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\oumar\\AppData\\Local\\Temp\\ipykernel_12280\\3803681437.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_23808\\3803681437.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  customer_support_df['Survey_response_Date'] = pd.to_datetime(customer_support_df['Survey_response_Date'],dayfirst=True)\n"
      ]
     },
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -620,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -683,9 +685,8 @@
     }
    ],
    "source": [
-    "# Connect to the SQLite database\n",
-    "conn = sqlite3.connect('cleaned_customer_support.db')\n",
     "\n",
+    "conn = sqlite3.connect('cleaned_customer_support.db')\n",
     "# Load the table into a pandas DataFrame\n",
     "cleaned_df = pd.read_sql_query(\"SELECT * FROM cleaned_customer_support\", conn)\n",
     "\n",
@@ -696,14 +697,12 @@
     "# Print information about the DataFrame\n",
     "print(\"\\nInformation about the DataFrame:\")\n",
     "cleaned_df.info()\n",
-    "\n",
-    "# Close the database connection\n",
-    "conn.close()\n"
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -772,9 +771,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Define a function to calculate sentiment\n",
+    "conn = sqlite3.connect('cleaned_customer_support.db')\n",
     "def calculate_sentiment(text):\n",
     "    try:\n",
     "        return TextBlob(str(text)).sentiment.polarity\n",
@@ -786,8 +783,11 @@
     "\n",
     "# Check the first few entries of the new sentiment_score column\n",
     "print(cleaned_df[['Customer_Remarks', 'sentiment_score']].head(50))\n",
+    "cleaned_df.to_sql('cleaned_customer_support', conn, if_exists='replace', index=False)\n",
     "\n",
-    "print(cleaned_df.columns)\n"
+    "print(cleaned_df.columns)\n",
+    "\n",
+    "conn.close()\n"
    ]
   },
   {
@@ -905,9 +905,6 @@
     }
    ],
    "source": [
-    "from transformers import BertTokenizer, BertForSequenceClassification, pipeline\n",
-    "import torch\n",
-    "\n",
     "# trying without specific model\n",
     "model_name = \"bert-base-uncased\"\n",
     "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
@@ -950,8 +947,6 @@
     }
    ],
    "source": [
-    "from transformers import pipeline\n",
-    "\n",
     "# This time, trying a model that's been fine-tuned for sentiment analysis\n",
     "model_name = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
     "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=model_name)\n",
@@ -991,7 +986,6 @@
    "source": [
     "# Drop the 'bert_sentiment' column since it was not a succes for both models\n",
     "cleaned_df.drop(columns=['bert_sentiment'], inplace=True)\n",
-    "\n",
     "# Display the DataFrame to confirm the column is dropped\n",
     "print(cleaned_df.columns)"
    ]
