--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -18,9 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import sqlite3\n",
-    "from transformers import pipeline\n",
     "from textblob import TextBlob\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -130,7 +128,7 @@
     "conn.close()\n",
     "\n",
     "# Confirm that the database operations are complete\n",
-    "print(\"\\nDatabase operations completed successfully.\")\n"
+    "print(\"\\nDatabase operations completed successfully.\")"
    ]
   },
   {
