--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -26,15 +26,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T17:36:19.888994700Z",
-     "start_time": "2024-03-18T17:36:17.814537200Z"
+     "end_time": "2024-03-18T17:59:25.816994400Z",
+     "start_time": "2024-03-18T17:59:25.778998900Z"
     }
    },
    "id": "bf780782b1157321"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Connect to database\n",
@@ -45,29 +45,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T17:36:20.127876400Z",
-     "start_time": "2024-03-18T17:36:19.890021700Z"
+     "end_time": "2024-03-18T17:59:25.970734600Z",
+     "start_time": "2024-03-18T17:59:25.783023700Z"
     }
    },
    "id": "9953ea2119f4b0ac"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Random Forest Model using multiple features:\n",
-      "RMSE: 1.5291\n",
-      "R-squared: 0.0113\n",
+      "RMSE: 1.5283\n",
+      "MAE: 1.1777\n",
+      "R-squared: 0.0123\n",
       "\n",
       "Top 5 Important Features for the Model:\n",
-      "response_time_minutes: 0.3004\n",
-      "issue_reported_hour_of_day: 0.1970\n",
-      "issue_reported_day_of_week: 0.1322\n",
-      "Agent Shift_Morning: 0.0215\n",
+      "response_time_minutes: 0.2983\n",
+      "issue_reported_hour_of_day: 0.1981\n",
+      "issue_reported_day_of_week: 0.1312\n",
+      "Agent Shift_Morning: 0.0222\n",
       "Tenure Bucket_>90: 0.0215\n"
      ]
     }
@@ -90,11 +91,13 @@
     "model_rf.fit(X_train, y_train)\n",
     "y_pred_rf = model_rf.predict(X_test)\n",
     "rmse_rf = np.sqrt(mean_squared_error(y_test, y_pred_rf))\n",
+    "mae_rf = mean_absolute_error(y_test, y_pred_rf)\n",
     "r2_rf = r2_score(y_test, y_pred_rf)\n",
     "\n",
     "# Print results for the Random Forest model using multiple features\n",
     "print(\"Random Forest Model using multiple features:\")\n",
     "print(f'RMSE: {rmse_rf:.4f}')\n",
+    "print(f'MAE: {mae_rf:.4f}')\n",
     "print(f'R-squared: {r2_rf:.4f}')\n",
     "\n",
     "# Print top 5 important features for the model\n",
@@ -109,11 +112,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T17:39:22.038689100Z",
-     "start_time": "2024-03-18T17:39:07.426575900Z"
+     "end_time": "2024-03-18T17:59:36.692026900Z",
+     "start_time": "2024-03-18T17:59:25.974705800Z"
     }
    },
    "id": "37f265babb8f8903"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-18T17:59:36.692026900Z",
+     "start_time": "2024-03-18T17:59:36.678483900Z"
+    }
+   },
+   "id": "4f75dfd5673aedf9"
   }
  ],
  "metadata": {
