finishing random forest notebook formatting

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11436,7 +11436,7 @@
     "sorted_results = sorted(results.items(), key=lambda x: x[1])\n",
     "print(\"\\nTop 5 Best Combinations:\")\n",
     "for i, (combination, rmse) in enumerate(sorted_results[:5], 1): \n",
-    "    print(f\"{i}. Combination: {combination}, RMSE: {rmse:.4f}\")\n"
+    "    print(f\"{i}. Combination: {combination}, RMSE: {rmse:.4f}\")"
    ]
   }
  ],
