analysis added for MLP

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11912,27 +11912,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-19T19:41:46.077616400Z",
-     "start_time": "2024-03-19T19:41:46.066840Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: Finish analysis for MLP results "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "Comparing the line of best fit (red) to the predicted values, we can see that there was an improvement in prediction accuracy compared to Random Forest. The values here have been clipped to fit the 0-5 CSAT score range."
+    "Comparing the line of best fit (red) to the predicted values, we can see that there was an improvement in prediction accuracy compared to Random Forest. The values here have been clipped to fit the 0-5 CSAT score range. The points are distributed more accurately around the line of best fit, indicating that the model is capable of capturing the relationship between the features and the target variable more accurately. This can be seen from the concentration of data points surrounding the line of best fit, which suggests that for a significant portion of the dataset, the model's predictions are quite close to the actual scores.\n",
+    "\n",
+    "The MLP model seems to offer a higher level of accuracy, particularly in the central portion of the score range. The outliers at the extremes highlight potential areas for model improvement. By implementing some improvements, it might be possible to enhance the model's predictive power, and thus result in a more uniform accuracy across the entire range of CSAT Scores."
    ]
   }
  ],
