Fixed a small issue with the names

--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_40372\\857256680.py:54: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_32580\\3918802853.py:47: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  balanced_data['CSAT_Score'] = pd.concat([pd.Series(y_resampled) for _, y_resampled in resampled_batches], ignore_index=True)\n"
      ]
     },
@@ -72,8 +72,8 @@
     "#Reverting to original values\n",
     "reverted_categorical_cols = pd.DataFrame()\n",
     "for col in non_numerical_cols:\n",
-    "    encoded_cols = original_to_encoded_cols[col]\n",
-    "    reverted_col = balanced_data[encoded_cols].idxmax(axis=1).apply(lambda x: x.split('_')[1])\n",
+    "    encoded_cols = [c for c in balanced_data.columns if c.startswith(col + '_')]\n",
+    "    reverted_col = balanced_data[encoded_cols].idxmax(axis=1).apply(lambda x: x.rsplit('_', 1)[-1])\n",
     "    reverted_categorical_cols[col] = reverted_col\n",
     "\n",
     "balanced_data = balanced_data.drop(columns=sum(original_to_encoded_cols.values(), []))\n",
