Reviewed our split of data

--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_32580\\3918802853.py:47: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  balanced_data['CSAT_Score'] = pd.concat([pd.Series(y_resampled) for _, y_resampled in resampled_batches], ignore_index=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced dataset saved to 'balance_customer_support.db'.\n"
+      "Num of batches:3\n",
+      "Desired Ratios:\n",
+      "Class 2: 328\n",
+      "Class 3: 511\n",
+      "Class 4: 1389\n",
+      "Desired Ratios:\n",
+      "Class 1: 1337\n",
+      "Class 5: 4263\n",
+      "Batch Number: 1\n",
+      "Batch Number: 2\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import sqlite3\n",
+    "import sqlite3,gc\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from imblearn.pipeline import Pipeline\n",
@@ -45,26 +46,48 @@
     "y = data['CSAT_Score'].astype(int)\n",
     "\n",
     "# Split the data into smaller batches\n",
-    "batch_size = 10000 \n",
+    "batch_size = 10000\n",
     "X_batches = [X[i:i+batch_size] for i in range(0, len(X), batch_size)]\n",
     "y_batches = [y[i:i+batch_size] for i in range(0, len(y), batch_size)]\n",
-    "\n",
+    "print(f\"Num of batches:{len(X_batches)}\")\n",
     "# Define the resampling strategies\n",
-    "desired_ratio = {\n",
-    "    1: 2000,  \n",
-    "    2: 1400,   \n",
-    "    3: 1800,   \n",
-    "    4: 2600   \n",
+    "original_counts = {\n",
+    "    1: 5348,\n",
+    "    2: 394,   \n",
+    "    3: 730,\n",
+    "    4: 2605,\n",
+    "    5: 19679  \n",
     "}\n",
-    "over = SMOTE(sampling_strategy=desired_ratio)\n",
-    "under = RandomUnderSampler(sampling_strategy={5: 4000})  \n",
+    "desired_ratio = {\n",
+    "    2: int(original_counts[2] / len(X_batches) * 2.5),   \n",
+    "    3: int(original_counts[3] / len(X_batches) * 2.3),   \n",
+    "    4: int(original_counts[4] / len(X_batches) * 2)\n",
+    "}\n",
+    "undersampling_ratio = {\n",
+    "  1: int(original_counts[1] / len(X_batches) * 0.75), \n",
+    "  5: int(original_counts[5] / len(X_batches)*0.65)\n",
+    "}\n",
+    "\n",
+    "over = SMOTE(sampling_strategy=desired_ratio,random_state=42)\n",
+    "under = RandomUnderSampler(sampling_strategy=undersampling_ratio,random_state=42)  \n",
     "resample_pipeline = Pipeline(steps=[('o', over), ('u', under)])\n",
     "\n",
+    "print(\"Desired Ratios for Oversampling:\")\n",
+    "for class_label, ratio in desired_ratio.items():\n",
+    "    print(f\"Class {class_label}: {ratio}\")\n",
+    "print(\"Desired Ratios for Undersampling:\")\n",
+    "for class_label, ratio in undersampling_ratio.items():\n",
+    "    print(f\"Class {class_label}: {ratio}\")\n",
     "# Adding the batches one by one \n",
+    "batch_num = 0\n",
     "resampled_batches = []\n",
     "for X_batch, y_batch in zip(X_batches, y_batches):\n",
+    "    batch_num+=1\n",
+    "    print(\"Batch Number:\",batch_num)\n",
     "    X_resampled, y_resampled = resample_pipeline.fit_resample(X_batch, y_batch)\n",
     "    resampled_batches.append((X_resampled, y_resampled))\n",
+    "    del X_resampled , y_resampled\n",
+    "    gc.collect()\n",
     "\n",
     "\n",
     "balanced_data = pd.concat([pd.DataFrame(X_resampled, columns=X.columns) for X_resampled, _ in resampled_batches])\n",
@@ -83,6 +106,34 @@
     "conn.close()\n",
     "\n",
     "print(\"Balanced dataset saved to 'balance_customer_support.db'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   CSAT_Score  count\n",
+      "0           1  10889\n",
+      "1           2   1233\n",
+      "2           3   1167\n",
+      "3           4   3187\n",
+      "4           5   9681\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "conn = sqlite3.connect('balance_customer_support.db')\n",
+    "query = \"SELECT CSAT_Score, COUNT(*) as count FROM balanced_customer_support GROUP BY CSAT_Score\"\n",
+    "csat_distribution = pd.read_sql_query(query, conn)\n",
+    "conn.close()\n",
+    "print(csat_distribution)"
    ]
   }
  ],
