--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -28,11 +28,22 @@
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from imblearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from textblob import TextBlob\n",
     "\n",
+    "# Function to calculate sentiment score\n",
+    "def calculate_sentiment(text):\n",
+    "    try:\n",
+    "        return TextBlob(str(text)).sentiment.polarity\n",
+    "    except:\n",
+    "        return None\n",
+    "    \n",
     "conn = sqlite3.connect('cleaned_customer_support.db')\n",
     "data = pd.read_sql_query(\"SELECT * FROM cleaned_customer_support\", conn)\n",
     "conn.close()\n",
+    "\n",
+    "# Drop sentiment_score before resampling, as it doesn't make sense for synthetic data\n",
+    "if 'sentiment_score' in data.columns:\n",
+    "    data = data.drop(columns=['sentiment_score'])\n",
     "\n",
     "# Identify non-numerical columns\n",
     "non_numerical_cols = data.select_dtypes(include=['object']).columns\n",
@@ -101,6 +112,7 @@
     "\n",
     "balanced_data = balanced_data.drop(columns=sum(original_to_encoded_cols.values(), []))\n",
     "balanced_data = pd.concat([balanced_data, reverted_categorical_cols], axis=1)\n",
+    "balanced_data['sentiment_score'] = balanced_data['Customer_Remarks'].apply(calculate_sentiment)\n",
     "conn = sqlite3.connect('balance_customer_support.db')\n",
     "balanced_data.to_sql('balanced_customer_support', conn, if_exists='replace', index=False)\n",
     "conn.close()\n",
