dropping rows with negative response time

--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,15 +10,16 @@
      "output_type": "stream",
      "text": [
       "Num of batches:3\n",
-      "Desired Ratios:\n",
+      "Desired Ratios for Oversampling:\n",
       "Class 2: 328\n",
-      "Class 3: 511\n",
-      "Class 4: 1389\n",
-      "Desired Ratios:\n",
+      "Class 3: 559\n",
+      "Class 4: 1736\n",
+      "Desired Ratios for Undersampling:\n",
       "Class 1: 1337\n",
       "Class 5: 4263\n",
       "Batch Number: 1\n",
-      "Batch Number: 2\n"
+      "Batch Number: 2\n",
+      "Batch Number: 3\n"
      ]
     }
    ],
@@ -112,6 +113,7 @@
     "\n",
     "balanced_data = balanced_data.drop(columns=sum(original_to_encoded_cols.values(), []))\n",
     "balanced_data = pd.concat([balanced_data, reverted_categorical_cols], axis=1)\n",
+    "balanced_data = balanced_data[balanced_data['response_time_minutes'] >= 0]\n",
     "balanced_data['sentiment_score'] = balanced_data['Customer_Remarks'].apply(calculate_sentiment)\n",
     "conn = sqlite3.connect('balance_customer_support.db')\n",
     "balanced_data.to_sql('balanced_customer_support', conn, if_exists='replace', index=False)\n",
