--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -11,15 +11,30 @@
      "text": [
       "Num of batches:3\n",
       "Desired Ratios for Oversampling:\n",
-      "Class 2: 328\n",
-      "Class 3: 559\n",
-      "Class 4: 1736\n",
+      "Class 2: 1313\n",
+      "Class 3: 1216\n",
+      "Class 4: 1042\n",
       "Desired Ratios for Undersampling:\n",
-      "Class 1: 1337\n",
-      "Class 5: 4263\n",
+      "Class 1: 802\n",
+      "Class 5: 1115\n",
       "Batch Number: 1\n",
       "Batch Number: 2\n",
       "Batch Number: 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\matth\\AppData\\Local\\Temp\\ipykernel_21404\\2270180766.py:82: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  balanced_data['CSAT_Score'] = pd.concat([pd.Series(y_resampled) for _, y_resampled in resampled_batches], ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced dataset saved to 'balance_customer_support.db'.\n"
      ]
     }
    ],
@@ -71,18 +86,20 @@
     "    5: 19679  \n",
     "}\n",
     "desired_ratio = {\n",
-    "    2: int(original_counts[2] / len(X_batches) * 2.5),   \n",
-    "    3: int(original_counts[3] / len(X_batches) * 2.3),   \n",
-    "    4: int(original_counts[4] / len(X_batches) * 2)\n",
+    "    2: int(original_counts[2] / len(X_batches) * 10),\n",
+    "    3: int(original_counts[3] / len(X_batches) * 5),\n",
+    "    4: int(original_counts[4] / len(X_batches) * 1.2)\n",
     "}\n",
     "undersampling_ratio = {\n",
-    "  1: int(original_counts[1] / len(X_batches) * 0.75), \n",
-    "  5: int(original_counts[5] / len(X_batches)*0.65)\n",
+    "    1: int(original_counts[1] / len(X_batches) * 0.45),\n",
+    "    5: int(original_counts[5] / len(X_batches) * 0.17)\n",
     "}\n",
     "\n",
-    "over = SMOTE(sampling_strategy=desired_ratio,random_state=42)\n",
-    "under = RandomUnderSampler(sampling_strategy=undersampling_ratio,random_state=42)  \n",
+    "over = SMOTE(sampling_strategy=desired_ratio, random_state=42)\n",
+    "under = RandomUnderSampler(sampling_strategy=undersampling_ratio, random_state=42)\n",
     "resample_pipeline = Pipeline(steps=[('o', over), ('u', under)])\n",
+    "\n",
+    "\n",
     "\n",
     "print(\"Desired Ratios for Oversampling:\")\n",
     "for class_label, ratio in desired_ratio.items():\n",
@@ -124,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -132,11 +149,11 @@
      "output_type": "stream",
      "text": [
       "   CSAT_Score  count\n",
-      "0           1   5885\n",
-      "1           2   1487\n",
-      "2           3   2169\n",
-      "3           4   4779\n",
-      "4           5   9164\n"
+      "0           1   3235\n",
+      "1           2   3590\n",
+      "2           3   2481\n",
+      "3           4   2590\n",
+      "4           5   3919\n"
      ]
     }
    ],
@@ -167,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
