--- a/good_copy.ipynb
+++ b/good_copy.ipynb
@@ -1300,6 +1300,15 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "The Confusion Matrix above shows the number of correct predictions of True Positives (along the diagonal from left to right). This confusion matrix, with its high number of correct predictions for some classes and significant misclassifications for others, particularly between scores 1 and 5, indicates a model with a reasonable level of accuracy but with potential areas for improvement, especially in its ability to differentiate between certain classes. The matrix suggests that the model might have been trained on an imbalanced dataset where some classes were overrepresented in the training data, leading to a bias toward those classes. We then continued by trying to rebalance the data and potentially retrain the model for more equitable class representation and improved classification performance across all classes."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
@@ -1332,8 +1341,7 @@
       "\n",
       "    accuracy                           0.44      4736\n",
       "   macro avg       0.41      0.32      0.32      4736\n",
-      "weighted avg       0.44      0.44      0.41      4736\n",
-      "\n"
+      "weighted avg       0.44      0.44      0.41      4736\n"
      ]
     }
    ],
@@ -1956,8 +1964,7 @@
       "\n",
       "    accuracy                           0.40      4736\n",
       "   macro avg       0.32      0.28      0.27      4736\n",
-      "weighted avg       0.37      0.40      0.36      4736\n",
-      "\n"
+      "weighted avg       0.37      0.40      0.36      4736\n"
      ]
     }
    ],
@@ -2240,8 +2247,7 @@
       "\n",
       "    accuracy                           0.46      3210\n",
       "   macro avg       0.46      0.45      0.45      3210\n",
-      "weighted avg       0.46      0.46      0.45      3210\n",
-      "\n"
+      "weighted avg       0.46      0.46      0.45      3210\n"
      ]
     }
    ],
@@ -2844,8 +2850,7 @@
       "\n",
       "    accuracy                           0.40      3210\n",
       "   macro avg       0.40      0.39      0.39      3210\n",
-      "weighted avg       0.40      0.40      0.39      3210\n",
-      "\n"
+      "weighted avg       0.40      0.40      0.39      3210\n"
      ]
     }
    ],
