added more comments

--- a/good_copy.ipynb
+++ b/good_copy.ipynb
@@ -2232,6 +2232,15 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "The balanced distribution of classes in the training dataset resulted in a more uniform distribution of correct predictions across classes compared to the previous models trained on the imbalanced data. This can be seen in the Confusion Matrix above, which shows higher correct predictions in classes that previously had fewer representations, such as class 2 and class 3. The most important features section (below) shows the most important features determined by the Random Forest model. This gives  a clear list of the most influential factors according to the Random Forest model trained on the balanced dataset."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Classification report for RF"
@@ -2835,6 +2844,15 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "As seen above, MLP appears to be reasonably good at identifying certain classes (particularly classes 2, 4, 5), but it has a tendency to confuse between others, which could be a focus for model improvement. This might involve tuning the hyperparameters further, collecting more distinct features, or employing different data preprocessing techniques to make the classes more separable for the MLP."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Classification Report for MLP"
@@ -2893,13 +2911,6 @@
     "\n",
     "for i, accuracy in enumerate(class_accuracies, start=1):\n",
     "    print(f\"Accuracy for class {i}: {accuracy:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Display the top 5 important features ... bla bla "
    ]
   },
   {
